--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
   display: flex;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 10px;
 }
 
 #navbar li {
@@ -41,9 +41,9 @@ li:hover {
 
 #headliner h1 {
   margin-bottom: 10px;
-  font-weight: normal;
   font-size: 70px;
-  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: steelblue;
 }
 
 #headliner h2 {
@@ -59,15 +59,12 @@ li:hover {
 }
 
 #fitBitesDesc {
-  display: flex;
-  margin: 0px 100px;
-  justify-content: space-between;
 }
 
 #fitBitesDesc p {
-  margin: 50px 10px 10px 10px;
-  height: 100px;
-  width: 500px;
+  margin: 50px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 16px;
+  width: 300px;
+  font-style: italic;
 }
