--- a/src/style.css
+++ b/src/style.css
@@ -4,29 +4,19 @@
   padding: 0;
 }
 
+#tab {
+  margin: 5px;
+  padding: 5px;
+}
+
 #navbar {
   display: flex;
   justify-content: center;
   margin: 10px 0px 50px 0px;
-}
-
-#navbar ul {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 10px;
-}
-
-#navbar li {
-  padding: 5px;
-  font-size: large;
-  text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
-  padding: 5px;
-  font-size: 20px;
 }
 
-li:hover {
+#tab:hover {
   background-color: steelblue;
   color: white;
 }
@@ -34,7 +24,6 @@ li:hover {
 #headliner {
   display: flex;
   flex-direction: column;
-
   font-family: Arial, Helvetica, sans-serif;
   margin: 100px;
 }
@@ -58,13 +47,30 @@ li:hover {
   text-align: center;
 }
 
-#fitBitesDesc {
-}
-
 #fitBitesDesc p {
   margin: 50px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   width: 300px;
   font-style: italic;
+}
+
+#menuSection {
+  padding: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#menuSection h1 {
+  color: steelblue;
+}
+
+#menuItem {
+  margin: 15px;
+  padding: 5px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#menuItem h2 {
+  font-weight: normal;
+  margin-bottom: 5px;
 }
