--- a/src/style.css
+++ b/src/style.css
@@ -74,3 +74,30 @@
   font-weight: normal;
   margin-bottom: 5px;
 }
+
+#form {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 10px 200px 10px 200px;
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type="submit"] {
+  background-color: steelblue;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
